before doing header menu

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
           <a class="header__logo link logo" href="./index.html"
@@ -50,11 +50,10 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="portfolio">
         <div class="container">
-          <!-- ----------------------------------------------------------- -->
           <ul class="portfolio-buttons">
             <li class="portfolio-buttons__item">
               <button class="portfolio-buttons__btn portfolio-buttons__btn--active" type="button">
@@ -74,7 +73,6 @@
               <button class="portfolio-buttons__btn" type="button">Маркетинг</button>
             </li>
           </ul>
-          <!-- ----------------------------------------------------------- -->
           <ul class="portfolio__list">
             <li class="portfolio__item">
               <div class="portfolio__pic">
@@ -208,7 +206,7 @@
           </ul>
         </div>
       </section>
-      <footer class="footer">
+      <!-- <footer class="footer">
         <div class="container">
           <div class="footer__adress-wrap">
             <a class="footer__logo logo" href="./index.html"
@@ -281,7 +279,7 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer> -->
     </main>
   </body>
 </html>
