--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
           <a class="header__logo link logo" href="./index.html"
@@ -49,7 +49,7 @@
             </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <section class="section-hero">
@@ -114,21 +114,17 @@
         </div>
       </section>
 
+      <script>
+        (() => {
+          document.querySelector('.js-speaker-form').addEventListener('submit', e => {
+            e.preventDefault();
 
-
-<script>
-(() => {
-  document.querySelector('.js-speaker-form').addEventListener('submit', e => {
-    e.preventDefault();
-
-    new FormData(e.currentTarget).forEach((value, name) =>
-      console.log(`${name}: ${value}`),
-    );
-  });
-})();
-</script>
-
-
+            new FormData(e.currentTarget).forEach((value, name) =>
+              console.log(`${name}: ${value}`)
+            );
+          });
+        })();
+      </script>
 
       <section class="about-section">
         <div class="container">
@@ -437,12 +433,14 @@
 
       <footer class="footer">
         <div class="container">
+          <div class="footer__container">
+
           <div class="footer__adress-wrap">
             <a class="footer__logo logo" href="./index.html"
               >Web<span class="footer__logo--white">Studio</span></a
             >
             <address>
-              <ul class="footer-list">
+              <ul class="footer__list">
                 <li class="footer__item footer-adress-item">
                   <a
                     class="footer__location-link"
@@ -505,6 +503,7 @@
                   </svg>
                 </button>
               </div>
+            </div>
             </div>
           </div>
         </div>
